# laa-cla-operator-app

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  README.md  esbuild.config.js  node.Dockerfile  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  workflow.yml
.github/actions/build-image/: action.yml
.github/actions/deploy/: action.yml
.github/actions/static-analysis-linting/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: build.yml  cleanup-release.yml  commit.yml  dependency-review.yml  deploy-ephemeral.yml  deploy.yml  feature-branch.yml  github.yml  main-branch.yml  publish-documentation.yml  sast.yml  sca.yml  snyk-image-scan.yml  static-analysis.yml  test.yml  trivy-cron.yml  trivy-image-scan.yml
app/: __init__.py
app/config/: __init__.py
app/demos/: routes.py
app/main/: forms.py  routes.py
app/main/utils/: widgets.py
app/services/search/: search.py
app/templates/: base.html
app/templates/auth/: sign_in.html
app/templates/calls/: receive_call.html
app/templates/components/: header.html  moj_crest.html
app/templates/demos/: autocomplete.html  bank_details.html  components.html  conditional_reveal.html  forms.html  (+2 more)
helm_deploy/laa-cla-operator-app/: Chart.yaml  values.yaml
tests/: .pre-commit-config.yaml   test_receive_call.py
tests/functional_tests/: test_receive_call_page.py  test_search_client.py  test_sign_in.py
(+30 files in other folders)
