[project]
name = "laa-cla-operator-app"
version = "0.1.0"
description = "laa-cla-operator-app"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (==3.1.3)",
    "flask-compress (>=1.24,<2.0)",
    "flask-limiter (>=4.1.1,<5.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "flask-wtf (>=1.3.0,<2.0.0)",
    "govuk-frontend-wtf (>=3.2.0,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-playwright (>=0.8.0,<0.9.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]
